# mapf_ros2

./: README.md  dissertation_rewrite.md
fleet_experiments/: EXPERIMENT_PROTOCOL.md  README.md  RUN_MATRIX.md  package.xml  setup.cfg  setup.py
fleet_experiments/config/: dense_landmarks_5x5.yaml  dissertation_figure_scenarios.yaml  dissertation_obstacle_scenarios.yaml  thesis_scenarios.yaml
fleet_experiments/fleet_experiments/: __init__.py  models.py  result_logger.py  run_experiment.py  scenario_loader.py  send_nav2_goals.py  summarize_results.py
fleet_experiments/fleet_experiments/modes/: __init__.py  discrete_cbs.py  manual_modes.py
fleet_experiments/resource/: fleet_experiments
fleet_experiments/results/: manual_run_log_template.csv
fleet_experiments/results/raw/: 20260313T165827Z_discrete_cbs_single_robot_run01.json  20260313T165922Z_discrete_cbs_head_on_horizontal_run01.json  20260313T165940Z_discrete_cbs_crossing_center_run01.json  20260313T172415Z_discrete_cbs_release_center_spawn_run01.json  20260313T172415Z_discrete_cbs_single_robot_spawn_run01.json  20260313T172416Z_discrete_cbs_crossing_from_spawn_run01.json  20260314T105634Z_discrete_cbs_obstacle_ring_eight_agents_run01.json  20260314T105649Z_discrete_cbs_complexity_eight_agents_run01.json  experiments.csv
fleet_experiments/results/raw/discrete_cbs/: complexity_eight_agents_run01_input.yaml  complexity_eight_agents_run01_output.yaml  complexity_multi_robot_run01_input.yaml  (+19 more)
fleet_experiments/results/summary/: summary.csv
fleet_experiments/tools/: generate_discrete_figures.py
(+42 files in other folders)
