<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_experiments</name>
  <version>0.0.1</version>
  <description>Experiment runner and result logger for centralized, decentralized and hybrid fleet evaluations.</description>
  <maintainer email="kaisar.abutalipovv@gmail.com">kaisar</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>hybrid_fleet_manager</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
